--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>
+<p>And this is a picture of a sausage:</p>
+<p>
+<img src="https://www.goodfreephotos.com/albums/vector-images/cooked-sausage-vector-clipart.png" alt="sausage"
+</p>
 </body>
 </html>
